// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicInventoryTooltip /> should render correctly 1`] = `
<ChartTooltip
  bodyJson={
    Object {
      "Avg. Ticket Price": "-$1.00",
      "Inventory": "100",
      "Revenue": "$100.00",
    }
  }
  headerText={[Function]}
/>
`;

exports[`<PeriodicInventoryTooltip /> should render correctly when active is false 1`] = `""`;

exports[`<PeriodicInventoryTooltip /> should render correctly when no payload is passed 1`] = `""`;

exports[`<PeriodicInventoryTooltip /> should render correctly with different dateformats  1`] = `
<ChartTooltip
  bodyJson={
    Object {
      "Avg. Ticket Price": "-$1.00",
      "Inventory": "100",
      "Revenue": "$100.00",
    }
  }
  headerText="Monday, June 18th, 2018 @ 11:47 AM ET"
/>
`;
